--- a/index.html
+++ b/index.html
@@ -139,5 +139,19 @@
       <!--Additional required wrapper-->
       <!--If we need pagination-->
         <div class="swiper-paination"></div>
-        
+
+        <div class="swiper-wrapper">
+      <!--Slides-->
+        <div class="swiper-slide"><imag src="img/ApacheKafka.svg" alt="Livro sobre apache kafka e spring boot da aula books"></div>
+          <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre liderança em desegn da alura books"></div>
+          <div class="swiper-slide"><ima src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks"></div>
+            <div class="swiper-slide"><ima src="img/Guia Front-end.svg" alt="Livro Guia front end"></div>
+              <div class="swiper-slide"><ima src="img/Portugol.svg" alt="Livro sobre portugol"></div>
+                <div class="swiper-slide"><ima src="img/Acessibilidade.svg" alt="Livro sobre acessibilidade"></div>
+        </div>
+      <!--If we need navigation buttons-->
+        <div class="swiper-button-prev"></div> 
+        <div class="swiper-button-next"></div>
+            </div>
+              
     </section>      
