--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
         <ul class="lista-menu">
         <li class="lista-menu__item">
         <a href="#" class="lista-menu__link">Programação</a>
-  </li>
-        <li class="lista-menu__item">
-        <a href="#" class="lista-menu__link">Front-end</a>
-  </li>
+  </li>Marketing Digital
         <li class="lista-menu__item">
         <a href="#" class="lista-menu__link">Infraestrutura</a>
    </li>
@@ -157,8 +154,155 @@
         <div class="card">
       <!--1°linha-->
         <div class="card_descrição">
-          
+      <!--1°Coluna-->
+        <div class="descrição">
+          <img src="img/Estrelinha.svg" slt="Avaiação 5 estrelas">
+          <h3 class="descrição_titulo">Autora do Mês</h3> 
+          <h2 class="descrição_titulo-livro">Juliana Agarikov</h2>
+          <p class="descrição_texto">Analista de sistemas e escritora, Julianaé especialista em Front-End</p>
         </div>
+      <!--2°Coluna-->
+        <img src="img/Escritora.svg" class="descrição_image">
       </div> 
-              
-    </section>      
+      <!--2°linha-->
+        <div class="card_botões">
+      <!--1°Coluna-->
+        <ul class="caed_botões">
+          <li class="botões_item"><img src="img/Favoritar.svg" alt="Fafritar livros"></li>
+          <li class="botões_item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+        </ul>
+      <!--2°Coluna-->
+          <a href="#"class="botões_ancora">Saiba mais</a> 
+        </div>
+        </div> 
+      </div>        
+    </section>
+      <section class="tópicos">
+        <h2 class="topicos_titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="tópicos_lista">
+         <li class="tópicos_item">
+          <a href="#" class="tópicos_link">Android</a>
+      </li>
+       <li class="tópicos_item">
+        <a href="#" class="tópico_link">Marketing Digital</a>
+       </li>
+       <li class="tópicos_item">
+        <a href="#" class="tópico_link">Agile</a>
+       </li>
+       <li class="tópicos_item">
+        <a href="#" class="tópico_link">Startups</a>
+       </li>
+       <li class="tópicos_item">
+        <a href="#" class="tópico_link">HTML e CSS</a>
+       </li>
+       <li class="tópicos_item">
+        <a href="#" class="tópico_link">Python</a>
+       </li>
+       <li class="tópicos_item">
+        <a href="#" class="tópico_link">OO</a>
+       </li>  
+       <li class="tópicos_item">
+        <a href="#" class="tópico_link">Java</a>
+       </li>
+      </ul>
+</section>    
+<section class="contato">
+      <div class="contato__descrição">
+       <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+       <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+  </div>
+    <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
+  </section>
+   <hr />
+     <footer class="rodapé">
+       <h2 class="rodapé__titulo">Grupo Alura</h2>
+        <ul class="lista-rodapé">
+         <li class="lista-rodapé__titulo">Educação</li>
+          <li class="lista-rodapé__item">
+          <img src="img/CasaDoCodigo.svg" alt="Logo da casa do código">
+            <a href="#" class="lista-rodapé__link">Casa do código</a>
+  </li>
+        <li class="lista-rodapé__item">
+        <img src="img/Caelum.svg" alt="Logo da caelum">
+         <a href="#" class="lista-rodapé__link">Caelum</a>
+    </li>
+  </ul>
+      <ul class="lista-rodapé">
+     <li class="lista-rodapé__titulo">Educação online</li>
+     <li class="lista-rodapé__item">
+      <img src="img/Alura.svg" alt="Logo da Alura">
+       <a href="#" class="lista-rodapé__link">Alura</a>
+  </li>
+      <li class="lista-rodapé__item">
+   <img src="img/AluraEmpresas.svg" alt="Logo da Alura para Empresas">
+  
+     <a href="#" class="lista-rodapé__link">Alura para Empresas</a>
+  </li>
+   <li class="lista-rodapé__item">
+   <img src="img/AluraLATAM.svg" alt="Logo da Alura Latam">
+    <a href="#" class="lista-rodapé__link">Alura LATAM</a>
+  </li>
+     <li class="lista-rodapé__item">
+      <img src="img/AluraStart.svg" alt="Logo da Alura START">
+      <a href="#" class="lista-rodapé__link">Alura Start</a>
+  </li>
+     <li class="lista-rodapé__item">
+     <img src="img/MusicDot.svg" alt="Logo da Music Dot">
+     <a href="#" class="lista-rodapé__link">Music Dot</a>
+  </li>
+       <li class="lista-rodapé__item">
+      <img src="img/AluraLingua.svg" alt="Logo da Alura Lingua">
+      <a href="#" class="lista-rodapé__link">Alura Lingua</a>
+  </li>
+     <li class="lista-rodapé__item">
+      <img src="img/PM3.svg" alt="Logo da PM3">
+       <a href="#" class="lista-rodapé__link">PM3</a>
+  </li>
+  </ul>
+       <ul class="lista-rodapé">
+        <li class="lista-rodapé__titulo">Comunidade</li>
+      <li class="lista-rodapé__item">
+      <img src="img/HipstersTech.svg" alt="Logo do Hipsters ponto Tech">
+       <a href="#" class="lista-rodapé__link">Hipsters ponto Tech</a>
+  </li>
+       <li class="lista-rodapé__item">
+       <img src="img/ScubaDev.svg" alt="Logo do Scuba Dev">
+      <a href="#" class="lista-rodapé__link">Scuba Dev</a>
+  </li>
+  
+     <li class="lista-rodapé__item">
+     <img src="img/LayersTech.svg" alt="Logo do Layers ponto Tech">
+     <a href="#" class="lista-rodapé__link">Layers ponto Tech</a>
+  </li>
+  <li class="lista-rodapé__item">
+     <img src="img/LikeABoss.svg" alt="Logo do Like a Boss">
+     <a href="#" class="lista-rodapé__link">Like a Boss</a>
+  </li>
+    <li class="lista-rodapé__item">
+    <img src="img/CarreiraSemFronteira.svg" alt="Logo do Carreira sem fronteiras">
+      <a href="#" class="lista-rodapé__link">Carreira sem fronteiras</a>
+  </li>
+     <li class="lista-rodapé__item">
+      <img src="img/HipstersJobs.svg" alt="Logo do Hipsters ponto jobs">
+     <a href="#" class="lista-rodapé__link">Hipsters ponto jobs</a>
+  </li>
+    <li class="lista-rodapé__item">
+     <img src="img/GUJ.svg" alt="Logo do GUJ">
+     <a href="#" class="lista-rodapé__link">GUJ</a>
+  </li>
+  </ul>
+  </footer>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+  <script>
+  const swiper = new Swiper('.swiper', {
+  spaceBetween: 10,
+  slidesPerView: 3,
+  pagination: {
+  el: '.swiper-pagination',
+  type: 'bullets',
+  },
+  });
+  </script>
+  
+  </body>
+  </html>
